--- a/MEINew/app/src/main/res/layout/logged_index_fragment.xml
+++ b/MEINew/app/src/main/res/layout/logged_index_fragment.xml
@@ -15,17 +15,15 @@
         <com.daimajia.slider.library.SliderLayout
             android:id="@+id/slider"
             android:layout_width="match_parent"
-            android:layout_height="200dp">
-
-        </com.daimajia.slider.library.SliderLayout>
+            android:layout_height="200dp" />
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:elevation="3dp"
             android:padding="16dp"
-            app:cardCornerRadius="3dp"
+            app:cardCornerRadius="4dp"
             app:cardElevation="3dp">
 
             <LinearLayout
@@ -36,15 +34,16 @@
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:padding="3dp">
+                    android:padding="6dp">
 
                     <ImageView
                         android:id="@+id/imageView3"
-                        android:layout_width="wrap_content"
+                        android:layout_width="25dp"
                         android:layout_height="15dp"
                         android:layout_alignBottom="@+id/textView10"
                         android:layout_alignParentStart="true"
-                        app:srcCompat="@android:drawable/ic_dialog_info" />
+                        android:layout_alignParentTop="true"
+                        app:srcCompat="@drawable/ic_location_city_black_24dp" />
 
                     <TextView
                         android:id="@+id/textView10"
@@ -60,7 +59,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical"
-                    android:padding="10dp"/>
+                    android:padding="10dp" />
 
 
             </LinearLayout>
@@ -68,14 +67,47 @@
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_margin="8dp"
-            app:cardCornerRadius="3dp">
+            app:cardCornerRadius="4dp"
+            app:cardElevation="3dp">
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/tweetRV"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="300dp" />
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:padding="6dp">
+
+                    <ImageView
+                        android:id="@+id/imageView5"
+                        android:layout_width="25dp"
+                        android:layout_height="15dp"
+                        android:layout_alignBottom="@+id/textView12"
+                        android:layout_alignParentStart="true"
+                        android:layout_alignParentTop="true"
+                        app:srcCompat="@drawable/ic_twitter" />
+
+                    <TextView
+                        android:id="@+id/textView12"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentTop="true"
+                        android:layout_toEndOf="@+id/imageView5"
+                        android:text="Twitter" />
+                </RelativeLayout>
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/tweetRV"
+                    android:layout_width="match_parent"
+                    android:layout_height="220dp" />
+
+
+            </LinearLayout>
+
         </android.support.v7.widget.CardView>
 
         <!--
